# node-addon-api-examples

./: .gitignore
examples/1-helloworld/: index.js  package.json
examples/1-helloworld/src/: hello.cpp
examples/10-array-buffer/: CMakeLists.txt  index.js
examples/10-array-buffer/src/: addon.cpp
examples/11-context/: CMakeLists.txt  package.json
examples/12-function-ref/: CMakeLists.txt  index.js  package.json
examples/12-function-ref/src/: addon.cpp  native.cpp  native.hpp
examples/13-async-work-example/: CMakeLists.txt  index.js  package.json
examples/13-async-work-example/src/: addon.cpp
examples/14-async-work-promise/: CMakeLists.txt  index.js  package.json
examples/14-async-work-promise/src/: addon.cpp  (+1 more)
examples/15-simple-async-worker/: CMakeLists.txt  index.js  package.json
examples/16-tsfn-promise-cb/: CMakeLists.txt  index.js  package.json
examples/17-tsfn-counting/: index.js  package.json
examples/2-function-arguments/: CMakeLists.txt  index.js  package.json
examples/3-callbacks/: CMakeLists.txt  index.js  package.json
examples/4-object-factory/: CMakeLists.txt  index.js  package.json
examples/5-function-factory/: CMakeLists.txt  index.js  package.json
examples/6-object-wrap/: CMakeLists.txt  index.js  package.json  pnpm-lock.yaml
examples/7-factory-wrap/: CMakeLists.txt  index.js  package.json
examples/8-passing-wrapped/: CMakeLists.txt  index.js  package.json
examples/9-array-buffer/: CMakeLists.txt  index.js
examples/helloworld/: CMakeLists.txt  package.json
setup/installation/: CMakeLists.txt  index.js  package.json
(+20 files in other folders)
